# bitcoin_msvc

./: .gitmodules  CMakeLists.txt  CMakeLists_leveldb.txt  CMakeLists_secp256k1.txt  CMakeLists_univalue.txt  CMakeSettings.json  README.md  bitcoin-config.h.in  build.cmd  libsecp256k1-config.h.in
patch/: patch-001601.diff  unistd.h
